--- a/jupyterdiffusion.ipynb
+++ b/jupyterdiffusion.ipynb
@@ -426,12 +426,12 @@
     "start = time.time()\n",
     "import torch\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "name = \"SpyTagScaffold\" \n",
-    "contigs = \"B:100\" \n",
-    "pdb = \"4MLI\" \n",
+    "name = \"test\" \n",
+    "contigs = \"\" \n",
+    "pdb = \"\" \n",
     "iterations = 50 \n",
     "hotspot = \"\" \n",
-    "num_designs = 30\n",
+    "num_designs = 50\n",
     "visual = \"none\" \n",
     "symmetry = \"cyclic\"\n",
     "order = 3 \n",
